<resources>
    <string name="app_name">crud_encuesta</string>
    <string name="title_agregar_escuela">Ingresar Datos de Escuela</string>
    <string name="lbl_nom_escuela">Nombre de Escuela</string>
    <string name="hint_nom">Nombre</string>
    <string name="title_activity_escuela">Escuela</string>
    <string name="agregar_string">Agregar</string>
    <string name="cancelar_string">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="lbl_borrar">¿Esta seguro?</string>
    <string name="lbl_borrar_escuela">¿Esta seguro? Se eliminaran todas las carreras asociadas a la Escuela.</string>
    <string name="title_borrar">Eliminar</string>
    <string name="men_actualizar">Se Actualizo Correctamente</string>
    <string name="men_guardar">Se Guardo Correctamente</string>
    <string name="men_camp_vacios">Campos Vacios</string>
    <string name="actualizar_string">Cambiar</string>
    <string name="title_activity_carrera">Carrera</string>
    <string name="title_agregar_carrera">Ingrese Datos de Carrera</string>
    <string name="lbl_nom_carrera">Nombre Carrera</string>
    <string name="ap_hint_username">Usuario</string>
    <string name="ap_hint_password">Contraseña</string>
    <string name="ap_button_login">LOGIN</string>
    <string name="ap_text_copy">Universidad de El Salvador</string>
    <string name="ap_buscar_evaluacion">Buscar Evaluacion</string>
    <string name="ap_buscar_turno">Buscar turno</string>
    <string name="ap_item">Item</string>
    <string name="ap_title_dialogo_evaluacion">Nuevo</string>
    <string name="ap_nombre_eva">Nombre evaluación</string>
    <string name="ap_duracion_eva">Duración</string>
    <string name="ap_num_intento_eva">Cantidad intentos</string>
    <string name="ap_desc_eva">Descripción</string>
    <string name="ap_visible_eva">Se permite retroceder?</string>
    <string name="ap_title_dialogo_turno">Nuevo</string>
    <string name="ap_dateinit">Inicio</string>
    <string name="ap_datefinish">Final</string>
    <string name="ap_pass_turno">Contraseña</string>
    <string name="ap_visible_turno">Turno visible</string>
    <string name="ap_agregar_turno">Agregar</string>
    <string name="ap_cancelar_turno">Cancelar</string>
    <string name="ap_agregar_eva">Agregar</string>
    <string name="ap_cancelar_eva">Cancelar</string>
    <string name="ap_titlevista_eva">Datos</string>
    <string name="ap_ok">OK</string>
    <string name="ap_retroceder">Se permite retroceder:</string>
    <string name="ap_titlevista_turno">Nuevo</string>
    <string name="title_activity_materia">Materia</string>
    <string name="title_agregar_materia">Agregar Materia</string>
    <string name="lbl_nom_pensum">Pensum</string>
    <string name="lbl_nom_cod_materia">Codigo Materia</string>
    <string name="lbl_nom_materia">Nombre Materia</string>
    <string name="lbl_electiva">Electiva</string>
    <string name="lbl_max_pregunta">Maximo Preguntas</string>
    <string name="hint_max">Maximo</string>
    <string name="hint_cod_mat">Codigo</string>
    <string name="men_eliminar">Se Elimino Correctamente</string>
    <string name="title_activity_encuesta">Encuesta</string>
    <string name="lbl_nom_encuesta">Nombre Encuesta</string>
    <string name="hint_descripcion">Descripcion</string>
    <string name="lbl_fecha_in">Fecha Inicio</string>
    <string name="hint_fecha_final">dd/mm/aa</string>
    <string name="lbl_fecha">Seleccione Fecha</string>
    <string name="title_agregar_encuesta">Agregar Encuesta</string>
    <string name="lbl_fecha_fi">Fecha Final</string>
    <string name="men_fecha_error">Fechas Incorrectas</string>
    <string name="men_fecha_in">Fecha de Inicio Encuesta</string>
    <string name="men_fecha_fi">Fecha Final de Encuesta</string>
    <string name="men_hora_in">Hora de Inicio de Encuesta</string>
    <string name="men_hora_fi">Hora Final de Encuesta</string>
    <string name="ap_datefinal">Final</string>
    <string name="ap_edt_datefinal">Fecha</string>
    <string name="ap_qdt_timefinal">Hora</string>
    <string name="title_activity_info">Informacion</string>
    <string name="title_activity_act">Actualizar</string>
    <string name="el_buscarMat">Buscar Materias</string>
    <string name="lbl_facu">Facultad</string>
    <string name="lbl_cod_escuela">Codigo Escuela</string>
    <string name="ap_titlevista_turno_pass">Acceso a intento</string>
    <string name="ap_indicaciones">Ingrese la contraseña para acceder al intento.</string>
    <string name="ap_ingreso_contraseña">Contraseña</string>
    <string name="ap_visible_si">Visible: SI</string>
    <string name="area">Area</string>
    <string name="evaluacion">Evaluacion</string>
    <string name="mt_titulo_del_area">Titulo del area</string>
    <string name="mt_aleatorio">Aleatorio</string>
    <string name="mt_cantidad_de_preguntas">Cantidad de preguntas</string>
    <string name="mt_peso_del_rea">Peso del área</string>
    <string name="mt_clave">Clave </string>
    <string name="mt_area">Area</string>
    <string name="mt_agregar">Agregar</string>
    <string name="mt_cancelar">Cancelar</string>
    <string name="mt_area_agregada">Area agregada con éxito</string>
    <string name="mt_campos_vacios">Error, hay campos vacíos</string>
    <string name="mt_editar">Editar</string>
    <string name="mt_actualizar">Actualizar</string>
    <string name="mt_eliminar">Eliminar</string>
    <string name="mt_eliminar_area">¿Desea eliminar esta area?</string>
    <string name="mt_eliminado_msj">Se ha eliminado con éxito</string>
    <string name="mt_agregar_clave">¿Desea agregar una nueva clave?</string>
    <string name="mt_aceptar">Aceptar</string>
    <string name="mt_clave_agregada">Nueva clave agregada</string>
    <string name="mt_registro_actualizado">Resgistro actualizado</string>
    <string name="mt_eliminar_clave">¿Desea eliminar esta clave?</string>
    <string name="mt_cantidad_positiva">Las cantidades ingresadas deben ser mayores a cero</string>
    <string name="mt_registro_exito">Registro insertado con éxito</string>
    <string name="mt_finalizar">Finalizar</string>
    <string name="mt_finalizar_evaluacion">¿Desea finalizar la evaluacion?</string>
    <string name="mt_ir_inicio">Regresar a Inicio</string>
    <string name="mt_buscar_area">Buscar area</string>
    <string name="mt_cant_preguntas_ingresadas">Error, la cantidad de preguntas ingresadas supera a la cantidad existente en esta area</string>
    <string name="mt_cargar_bd">Desea Cargar la base de datos</string>
    <string name="mt_cargar">Cargar</string>
    <string name="mt_bd_cargada">La base de datos ha sido cargada</string>
    <string name="mt_vaciar_bd">Desea Vaciar la base de datos</string>
    <string name="mt_vaciar">Vaciar</string>
    <string name="mt_bd_vaciada">La base de datos ha sido vaciada</string>
    <string name="ap_evaluaciones">Pensum</string>
    <string name="ap_buscar_pensum">Buscar pensum</string>
    <string name="ap_title_dialogo_pensum">Nuevo</string>
    <string name="ap_anio_pensum">Año de pensum</string>
    <string name="ap_title_dialogo_pensum_materia">Añadir materia</string>
    <string name="ap_titlevista_pensum">Materias de pensum</string>
    <string name="ap_materias">Listado de materias</string>
    <string name="ap_pensum_materia">Pensum Materia</string>
    <string name="ap_buscar_pensum_materia">Buscar</string>
    <string name="ap_Turnos">Turno</string>
    <string name="ap_Evaluaciones">Evaluaciones</string>
    <string name="ap_el_usuario_no_existe">El usuario no existe</string>
    <string name="ap_error">Error!</string>
    <string name="ap_no_posee_carga">No posees carga acádemica</string>
    <string name="ap_debes_de_llenar">Debes llenar los campos de nombre, intento y duración</string>
    <string name="ap_debes_ingresar">Debes ingresar un nombre de consulta</string>
    <string name="ap_bienvenido">Bienvenido </string>
    <string name="ap_usuario">Usuario y/o contraseña no válidos</string>
    <string name="ap_nuevo">Nuevo</string>
    <string name="ap_agregar">Agregar</string>
    <string name="ap_llena_todos_los_campos">Debes llenar y seleccionar todos los campos</string>
    <string name="ap_debes_seleccionar">Debes seleccionar una materia</string>
    <string name="ap_contrasenia_no_valida">Contraseña no valida </string>
    <string name="ap_llena_los_campos">Debe de llenar los campos</string>
    <string name="ap_cancelar">Cancelar</string>
    <string name="ap_fecha_no_valida">Fecha no valida, por favor revisar</string>
    <string name="ap_salir">¿Deseas salir de la aplicación: </string>
    <string name="ap_vuelve">Vuelve pronto </string>
    <string name="ap_delete_turno">¿Esta seguro? Se eliminaran todas las claves asociadas a este turno.</string>
    <string name="ap_delete_pensum">¿Esta seguro? Se eliminaran todas los objetos pensum-materia asociadas a este pensum.</string>
    <string name="ap_delete_evaluación">¿Esta seguro? Se eliminaran todas los turnos asociadas a esta evaluación.</string>
    <string name="ap_debes01">Debes llenar los campos de nombre, intento y duración</string>
    <string name="ap_desea01">¿Desea eliminar el registro?</string>
    <string name="msg_bienvenida">¡Bienvenido!</string>
    <string name="opc_escuela">Escuela</string>
    <string name="opc_docente">Docente</string>
    <string name="opc_alumno">Estudiante</string>
    <string name="opc_encuesta">Encuesta</string>
    <string name="texto_opciones">Opciones</string>
    <string name="texto_preguntas">Preguntas</string>
    <string name="texto_descripcion">Descripción</string>
    <string name="texto_titulo_dialogo_gpo_emp">Agregar Grupo Emparejamiento</string>
    <string name="texto_titulo_dialogo_opcion">Agregar Opción</string>
    <string name="hint_opcion">Opción</string>
    <string name="checkb_correcta">Correcta</string>
    <string name="texto_titulo_dialogo_pregunta">Agregar Pregunta</string>
    <string name="hint_pregunta">Pregunta</string>
    <string name="texto_gpo_emp">Grupos de emparejamiento</string>
    <string name="opc_matciclo">Materia Ciclo</string>
    <string name="opc_pensum">Pensum</string>
    <string name="buscar_preg">Buscar Pregunta</string>
    <string name="opc_clave">Clave</string>
    <string name="msg_falta_desc_gpo_emp">¡Ingrese la descripción del grupo de emparejamiento!</string>
    <string name="msg_falta_texto_opc">¡Ingrese el texto de la opción!</string>
    <string name="msg_falta_texto_preg">¡Ingrese el texto de la pregunta!</string>
    <string name="msg_consulta_nula">Debes ingresar un nombre de consulta</string>
    <string name="positivo">Si</string>
    <string name="negativo">No</string>
    <string name="edit_preg">Editar Pregunta</string>
    <string name="del_preg_1">¿Esta seguro de eliminar la pregunta?, se eliminaran</string>
    <string name="del_preg_2">opciones en caso de aceptar!!</string>
    <string name="edit_gpo_emp">Editar Grupo Emparejamiento</string>
    <string name="edit_opc">Editar Opcion</string>
    <string name="del_opc">¿Esta seguro de eliminar la opcion?</string>
    <string name="del_gpo_emp_1">¿Esta seguro de eliminar el grupo de emparejamiento?, se eliminaran</string>
    <string name="del_gpo_emp_2">pregunta(s) y</string>
    <string name="del_gpo_emp_3">opcion(es) en caso de aceptar!!</string>
    <string name="est_titulo2">Estudiante</string>
    <string name="est_edtx_carnet">Carnet</string>
    <string name="est_chck_activo">Activo</string>
    <string name="est_tv_nombre">Nombre: </string>
    <string name="est_tv_anio">Año Ingreso: </string>
    <string name="mtc_cicloi">Ciclo I</string>
    <string name="mtc_cicloii">Ciclo II</string>
    <string name="mtc_vista">Materia Ciclo: </string>
    <string name="mtc_ciclo">Ciclo: </string>
    <string name="mtc_anio">Año: </string>
    <string name="btn_agregar">Agregar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_salir">Salir</string>
</resources>