<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ap_tv_title_dialogo_eva"
                android:background="@color/primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ap_title_dialogo_evaluacion"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/icons"
                android:padding="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/ap_edt_nombre_eva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/ap_nombre_eva"/>

            <EditText
                android:id="@+id/ap_edt_duracion_eva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:hint="@string/ap_duracion_eva"/>

            <EditText
                android:id="@+id/ap_edt_num_intento_eva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ap_num_intento_eva"
                android:inputType="number"/>

            <EditText
                android:id="@+id/ap_edt_desc_eva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/ap_desc_eva"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ap_visible_eva"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:padding="30dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/d_agregar_eva"
                    android:text="@string/ap_agregar_eva"
                    android:layout_weight="0.5"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/d_cancelar_eva"
                    android:text="@string/ap_cancelar_eva"
                    android:layout_weight="0.5"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>