<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ap_tv_titulovista_turno_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/ap_titlevista_turno_pass"
            android:textColor="@color/icons"
            android:background="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">
        <TextView
            android:id="@+id/ap_tv_indicaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ap_indicaciones"
            android:textSize="18sp"
            android:textColor="@color/primary_text"/>


        <EditText
            android:id="@+id/ap_edt_pass_intento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/ap_ingreso_contraseña"
            android:textColor="@color/primary_text"/>

    </LinearLayout>

</LinearLayout>