<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/toolbar_std"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/icons"
            android:textSize="18sp"
            android:text="@string/est_titulo2"/>
        <android.support.v4.widget.Space
            android:layout_width="10sp"
            android:layout_height="0sp" />
        <TextView
            android:id="@+id/toolbar2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/icons"
            android:textSize="18sp"
            android:text=""/>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editt_carnet_estd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textSize="18sp"
                    android:hint="@string/est_edtx_carnet" />
                <CheckBox
                    android:id="@+id/cb_actividad_estd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:textSize="18sp"
                    android:text="@string/est_chck_activo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/est_tv_nombre"/>
                <EditText
                    android:id="@+id/editt_nombre_estd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/est_tv_anio"/>
                <android.support.v4.widget.Space
                    android:layout_width="30dp"
                    android:layout_height="0dp" />
                <EditText
                    android:id="@+id/editt_anio_ingreso_estd"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:inputType="number"
                    android:hint="YYYY"/>
                <android.support.v4.widget.Space
                    android:layout_width="20dp"
                    android:layout_height="0dp" />
                <Button
                    android:id="@+id/btn_agregar_anio"
                    android:layout_width="37dp"
                    android:layout_height="33dp"
                    android:background="@drawable/ic_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_agregar_estd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_agregar"/>
                <Button
                    android:id="@+id/btn_cancelar_estd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_cancelar"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>